Improved featured logos on the home screen.

--- a/site/blueprints/home.yml
+++ b/site/blueprints/home.yml
@@ -7,6 +7,9 @@ files: true
     title:
       label: Title
       type: text
+    link:
+      label: Website
+      type: url
     caption:
       label: Caption
       type: textarea
