--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "site/plugins/krb"]
 	path = site/plugins/krb
 	url = https://github.com/eXpl0it3r/kirby-krb.git
+[submodule "content"]
+	path = content
+	url = https://github.com/eXpl0it3r/sfmlprojects-content.git
