--- a/.gitmodules
+++ b/.gitmodules
@@ -9,4 +9,5 @@
 	url = https://github.com/eXpl0it3r/kirby-krb.git
 [submodule "content"]
 	path = content
+	branch = master
 	url = https://github.com/eXpl0it3r/sfmlprojects-content.git
