Added support for previewfiles field

--- a/site/blueprints/home.yml
+++ b/site/blueprints/home.yml
@@ -15,6 +15,9 @@ files: true
       type: textarea
 
 fields:
+  previewfiles:
+    type: previewfiles
+
   title:
     label: Title
     type:  text
