--- a/site/blueprints/list.yml
+++ b/site/blueprints/list.yml
@@ -14,6 +14,9 @@ files: true
       type: textarea
 
 fields:
+  previewfiles:
+    type: previewfiles
+
   title:
     label: Title
     type:  text
