--- a/.gitmodules
+++ b/.gitmodules
@@ -1,10 +1,10 @@
 [submodule "kirby"]
 	path = kirby
-	url = https://github.com/getkirby/kirby.git
+	url = https://github.com/getkirby-v2/kirby.git
 	branch = master
 [submodule "panel"]
 	path = panel
-	url = https://github.com/getkirby/panel.git
+	url = https://github.com/getkirby-v2/panel.git
 	branch = master
 [submodule "site/plugins/krb"]
 	path = site/plugins/krb
