--- a/site/blueprints/pages/project.yml
+++ b/site/blueprints/pages/project.yml
@@ -66,6 +66,7 @@ tabs:
               indiedb: IndieDB Page
               gamejolt: Game Jolt
               bitbucket: Bitbucket Repository
+              gitlab: "GitLab Repository"
               switch: Nintendo Switch Store
               google: Play Store
               apple: App Store
@@ -74,105 +75,6 @@ tabs:
             label: URL
             type: url
             width: 3/4
-      offical_site:
-        label: Official Site
-        type: url
-      steam:
-        label: Steam Store/Community
-        type: url
-      sfml_forum:
-        label: SFML Forum
-        type: url
-        width: 1/2
-      tig_source:
-        label: TIGSource Forum
-        type: url
-        width: 1/2
-      itch_io:
-        label: itch.io Page
-        type: url
-        width: 1/3
-      indie_db:
-        label: IndieDB Page
-        type: url
-        width: 1/3
-      gamejolt:
-        label: Game Jolt
-        type: url
-        width: 1/3
-      github:
-        label: GitHub Repository
-        type: url
-        width: 1/2
-      bitbucket:
-        label: Bitbucket Repository
-        type: url
-        width: 1/2
-      custom_link_one_label:
-        label: Custom Link Label
-        type: text
-        width: 1/4
-      custom_link_one:
-        label: Custom Link 1
-        type: url
-        width: 1/4
-      custom_link_two_label:
-        label: Custom Link Label
-        type: text
-        width: 1/4
-      custom_link_two:
-        label: Custom Link 2
-        type: url
-        width: 1/4
-      brief_main:
-        label: Brief Main Link
-        type: select
-        required: true
-        width: 1/3
-        options:
-          offical_site: Official Website
-          steam: Steam Store/Community
-          sfml_forum: SFML Forum
-          tig_source: TIGSource Forum
-          itch_io: itch.io Page
-          indie_db: IndieDB Page
-          gamejolt: Game Jolt
-          github: GitHub Repository
-          bitbucket: Bitbucket Repository
-          custom_link_one: Custom Link 1
-          custom_link_two: Custom Link 2
-      brief_second:
-        label: Brief Second Link
-        type: select
-        width: 1/3
-        options:
-          offical_site: Official Website
-          steam: Steam Store/Community
-          sfml_forum: SFML Forum
-          tig_source: TIGSource Forum
-          itch_io: itch.io Page
-          indie_db: IndieDB Page
-          gamejolt: Game Jolt
-          github: GitHub Repository
-          bitbucket: Bitbucket Repository
-          custom_link_one: Custom Link 1
-          custom_link_two: Custom Link 2
-      brief_third:
-        label: Brief Third Link
-        type: select
-        width: 1/3
-        options:
-          offical_site: Official Website
-          steam: Steam Store/Community
-          sfml_forum: SFML Forum
-          tig_source: TIGSource Forum
-          itch_io: itch.io Page
-          indie_db: IndieDB Page
-          gamejolt: Game Jolt
-          github: GitHub Repository
-          bitbucket: Bitbucket Repository
-          custom_link_one: Custom Link 1
-          custom_link_two: Custom Link 2
   media:
     label: Media
     icon: image
