Add additional games
- Wing of Misadventure
- UnderRail

--- a/site/blueprints/pages/project.yml
+++ b/site/blueprints/pages/project.yml
@@ -71,6 +71,7 @@ tabs:
               gog: Good Old Games
               indiedb: IndieDB Page
               gamejolt: Game Jolt
+              humblebundle: Humble
               bitbucket: Bitbucket Repository
               gitlab: "GitLab Repository"
               switch: Nintendo Switch Store
